...

private val INVALID_FILE_CHARS = Regex("[\\\\/:*?\"<>|]+")

internal const val EXPORT_COMPACT_LAYOUT_TAG = "export-compact-layout"
internal const val EXPORT_MEDIUM_LAYOUT_TAG = "export-medium-layout"
internal const val EXPORT_EXPANDED_LAYOUT_TAG = "export-expanded-layout"
internal const val EXPORT_FILE_NAME_TAG = "export-file-name"
internal const val EXPORT_OPTIONS_LIST_TAG = "export-options-list"
internal const val EXPORT_SAVE_ACTION_TAG = "export-save-action"
internal const val EXPORT_SHARE_ACTION_TAG = "export-share-action"

